IMPALA-245: day() function returns wrong result

Changes day() to return same result as dayofmonth() and adds dayofyear().