be/src/exprs/expr-test.cc
@@ -2107,7 +2107,8 @@ TEST_F(ExprTest, TimestampFunctions) {
   TestValue("year(cast('2011-12-22 09:10:11.000000' as timestamp))", TYPE_INT, 2011);
   TestValue("month(cast('2011-12-22 09:10:11.000000' as timestamp))", TYPE_INT, 12);
   TestValue("dayofmonth(cast('2011-12-22 09:10:11.000000' as timestamp))", TYPE_INT, 22);
-  TestValue("day(cast('2011-12-22 09:10:11.000000' as timestamp))", TYPE_INT, 356);
+  TestValue("day(cast('2011-12-22 09:10:11.000000' as timestamp))", TYPE_INT, 22);
+  TestValue("dayofyear(cast('2011-12-22 09:10:11.000000' as timestamp))", TYPE_INT, 356);
   TestValue("weekofyear(cast('2011-12-22 09:10:11.000000' as timestamp))", TYPE_INT, 51);
   TestValue("hour(cast('2011-12-22 09:10:11.000000' as timestamp))", TYPE_INT, 9);
   TestValue("minute(cast('2011-12-22 09:10:11.000000' as timestamp))", TYPE_INT, 10);
@@ -2115,7 +2116,8 @@ TEST_F(ExprTest, TimestampFunctions) {
   TestValue("year(cast('2011-12-22' as timestamp))", TYPE_INT, 2011);
   TestValue("month(cast('2011-12-22' as timestamp))", TYPE_INT, 12);
   TestValue("dayofmonth(cast('2011-12-22' as timestamp))", TYPE_INT, 22);
-  TestValue("day(cast('2011-12-22' as timestamp))", TYPE_INT, 356);
+  TestValue("day(cast('2011-12-22' as timestamp))", TYPE_INT, 22);
+  TestValue("dayofyear(cast('2011-12-22' as timestamp))", TYPE_INT, 356);
   TestValue("weekofyear(cast('2011-12-22' as timestamp))", TYPE_INT, 51);
   TestValue("hour(cast('09:10:11.000000' as timestamp))", TYPE_INT, 9);
   TestValue("minute(cast('09:10:11.000000' as timestamp))", TYPE_INT, 10);
@@ -2130,6 +2132,7 @@ TEST_F(ExprTest, TimestampFunctions) {
   TestIsNull("month(cast('09:10:11.000000' as timestamp))", TYPE_INT);
   TestIsNull("dayofmonth(cast('09:10:11.000000' as timestamp))", TYPE_INT);
   TestIsNull("day(cast('09:10:11.000000' as timestamp))", TYPE_INT);
+  TestIsNull("dayofyear(cast('09:10:11.000000' as timestamp))", TYPE_INT);
   TestIsNull("weekofyear(cast('09:10:11.000000' as timestamp))", TYPE_INT);
   TestIsNull("datediff(cast('09:10:11.12345678' as timestamp), "
       "cast('2012-12-22' as timestamp))", TYPE_INT);
@@ -2138,6 +2141,7 @@ TEST_F(ExprTest, TimestampFunctions) {
   TestIsNull("month(NULL)", TYPE_INT);
   TestIsNull("dayofmonth(NULL)", TYPE_INT);
   TestIsNull("day(NULL)", TYPE_INT);
+  TestIsNull("dayofyear(NULL)", TYPE_INT);
   TestIsNull("weekofyear(NULL)", TYPE_INT);
   TestIsNull("datediff(NULL, '2011-12-22 09:10:11.12345678')", TYPE_INT);
   TestIsNull("datediff('2012-12-22', NULL)", TYPE_INT);
